# hyligotchi

./: Cargo.toml  Dockerfile.server  README.md
.github/workflows/: docker.yaml
contracts/: Cargo.toml  build.rs  metadata.rs
contracts/blackjack/: Cargo.toml  blackjack.img  blackjack.txt
contracts/blackjack/src/: client.rs  lib.rs  main.rs
contracts/hyligotchi/: Cargo.toml
contracts/hyligotchi/src/: client.rs  lib.rs  main.rs  smt.rs
elf/: hyligotchi
front/: Dockerfile.server  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.lib.config.ts
front/.claude/issues/: issue_1.md  issue_2.md  issue_3.md  issue_4.md
front/.claude/plans/: plan_issue_2.md
front/src/: App.css  App.tsx  index.css  vite-env.d.ts
front/src/lib/: index.ts  types.d.ts
front/src/lib/tamagotchi/: README.md  TamagotchiLibrary.tsx  index.ts
front/src/lib/tamagotchi/api/: client.ts
front/src/lib/tamagotchi/components/: FullTamagotchi.tsx  MiniTamagotchi.tsx
front/src/lib/tamagotchi/components/menus/: CasinoMenuScreen.tsx  FoodMenuScreen.tsx  HealthMenuScreen.tsx  OrangeNinja.tsx  OrderbookMenuScreen.tsx  StatsMenuScreen.tsx
front/src/lib/tamagotchi/components/screens/: ConnectWalletScreen.tsx  DeathScreen.tsx  InitPendingScreen.tsx  TamagotchiScreen.tsx  TutorialScreen.tsx  WalletRequiredScreen.tsx
front/src/lib/tamagotchi/components/ui/: Character.tsx  CleaningAnimation.css  CleaningAnimation.tsx  ClickableZoneOverlay.tsx  PooIndicator.tsx  SickIndicator.tsx  TransactionNotification.tsx  VirtualScreenOverlay.tsx
front/src/lib/tamagotchi/components/ui/icons/: CasinoIcon.tsx  CleanIcon.tsx  FoodIcon.tsx  HealthIcon.tsx  OrangeNinjaIcon.tsx  OrderbookIcon.tsx  StatsIcon.tsx  WalletIcon.tsx  index.ts
front/src/lib/tamagotchi/config/: deviceConfig.ts
front/src/lib/tamagotchi/contexts/: WalletContext.tsx
front/src/lib/tamagotchi/hooks/: useAnimationFrame.ts  useApiActions.ts  useApiSync.ts  useFoodBalances.ts  useHealthBalances.ts  useMenuState.ts  useTamagotchiState.ts
front/src/lib/tamagotchi/types/: gameState.ts  index.ts
front/src/lib/tamagotchi/utils/: animationManager.ts  foodBalances.ts  gameStateManager.ts  healthBalances.ts
front/src/types/: vite-env.d.ts
server/: Cargo.toml
server/src/: app.rs  conf.rs  conf_defaults.toml  init.rs  lib.rs  main.rs  ticker_module.rs  utils.rs
