[package]
name = "contracts"
edition = { workspace = true }
rust-version = "1.85"

[lib]
path = "metadata.rs"

[dependencies]
sdk = { workspace = true }
hyligotchi = { workspace = true, features = ["sp1"] }

sp1-sdk = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }

[features]
build = []
