[package]
name = "server"
edition = "2021"

[dependencies]
sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["sp1", "rest"] }
hyle_modules = { workspace = true }
hyle_smt_token = { workspace = true }
hyligotchi = { workspace = true, features = ["client"] }
contracts = { workspace = true, features = [] }

sp1-sdk = { workspace = true }

axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0.93"
reqwest = { version = "0.12.9", features = ["json"] }
hex = "0.4.3"
sha2 = "0.10.8"
hmac = "0.12.1"
config = { version = "0.15.11", default-features = false, features = ["toml"] }

rand = "0.9.0"
borsh = "1.5.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
clap = { version = "4.2", features = ["derive"] }
utoipa-axum = { version = "0.2.0" }
utoipa = "5.3.1"
secp256k1 = { version = "0.31.0" }

opentelemetry = { version = "0.28" }
prometheus = { version = "0.13.4" }
futures = "0.3.31"
opentelemetry_sdk = "0.28.0"
opentelemetry-prometheus = "0.28.0"
