[package]
name = "hyligotchi"
edition = { workspace = true }
rust-version = "1.85"

[[bin]]
name = "hyligotchi"
path = "src/main.rs"
required-features = ["sp1"]
test = false

[dependencies]
anyhow = "1.0.96"
sdk = { workspace = true, features = ["tracing"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
borsh = { version = "1.5.7" }
uuid = { version = "1.6", features = ["serde"], default-features = false }

sp1-zkvm = { version = "5.0.0", default-features = false, optional = true }
client-sdk = { workspace = true, default-features = false, features = [
    "sp1",
    "rest",
], optional = true }
hyle_hyllar = { workspace = true }
rand = { version = "0.9.0", default-features = false }
rand_seeder = { version = "0.4.0", default-features = false }

[dev-dependencies]
# Active client feature for tests
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }

[features]
default = []
client = ["dep:client-sdk"]
sp1 = ["dep:sp1-zkvm", "sdk/sp1"]
