[package]
name = "hyligotchi"
edition = { workspace = true }
rust-version = "1.85"

[[bin]]
name = "hyligotchi"
path = "src/main.rs"
required-features = ["sp1"]
test = false

[dependencies]
anyhow = "1.0.96"
sdk = { workspace = true, features = ["tracing", "smt"] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
borsh = { version = "1.5.7" }
uuid = { version = "1.6", features = ["serde"], default-features = false }
hex = "0.4.3"

sp1-zkvm = { workspace = true, optional = true }
client-sdk = { workspace = true, default-features = false, features = [
    "sp1",
    "rest",
    "indexer",
], optional = true }
hyle_smt_token = { workspace = true }
rand = { version = "0.9.0", default-features = false }
rand_seeder = { version = "0.4.0", default-features = false }

sparse-merkle-tree = "0.6.1"
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
serde_with = "3.12.0"

[dev-dependencies]
# Active client feature for tests
clap = { version = "4.5.23", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.44.2", features = ["full", "tracing"] }

[features]
default = []
client = ["dep:client-sdk"]
sp1 = ["dep:sp1-zkvm", "sdk/sp1"]
